language/move-lang/tests/move_check/locals/use_before_assign_while.exp
error: 

   ┌── tests/move_check/locals/use_before_assign_while.move:3:13 ───
   │
 4 │         while (cond) { let y = move x + 1; x = 0; y; }
   │                                ^^^^^^ Invalid usage of local 'x'
   ·
 3 │         let x: u64;
   │             - The local does not have a value due to this position. The local must be assigned a value before being used
   │

error: 

   ┌── tests/move_check/locals/use_before_assign_while.move:8:13 ───
   │
 9 │         while (cond) { let y = move x + 1; if (cond) { continue }; x = 0; y; }
   │                                ^^^^^^ Invalid usage of local 'x'
   ·
 8 │         let x: u64;
   │             - The local does not have a value due to this position. The local must be assigned a value before being used
   │

error: 

    ┌── tests/move_check/locals/use_before_assign_while.move:13:13 ───
    │
 14 │         while (cond) { let y = &x; _ = move y; x = 0 }
    │                                ^^ Invalid usage of local 'x'
    ·
 13 │         let x: u64;
    │             - The local does not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_before_assign_while.move:18:13 ───
    │
 19 │         while (cond) { let y = &x; _ = move y; if (cond) { x = 0 }; break }
    │                                ^^ Invalid usage of local 'x'
    ·
 18 │         let x: u64;
    │             - The local does not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_before_assign_while.move:19:60 ───
    │
 19 │         while (cond) { let y = &x; _ = move y; if (cond) { x = 0 }; break }
    │                                                            ^ Unused assignment or binding for local 'x'. Consider removing or replacing it with '_'
    │

